--- a/index.html
+++ b/index.html
@@ -1975,43 +1975,49 @@
             background-repeat: no-repeat;
             opacity: 0.5;
             pointer-events: none;
-        }
+            
+}
 
-        .decoration-1 {
-            width: 532px;
-            height: 516px;
-            left: -220px;
-            top: 200.93px;
-            background: radial-gradient(circle, #8B8680 0%, transparent 60%);
-            transform: rotate(15deg);
-        }
+.decoration-1 {
+    width: 532px;
+    height: 516px;
+    left: -220px;
+    top: 200.93px;
+    background-image: url('images/v127_615.png');
+    /* background: radial-gradient(circle, #8B8680 0%, transparent 60%); */
+    transform: rotate(15deg);
+}
 
-        .decoration-2 {
-            width: 574px;
-            height: 517px;
-            right: -150px;
-            top: -290.2px;
-            background: radial-gradient(circle, #8B8680 0%, transparent 60%);
-            transform: rotate(-15deg);
-        }
+.decoration-2 {
+    width: 574px;
+    height: 517px;
+    right: -150px;
+    top: -290.2px;
+    background-image: url('images/v127_615.png');
+    /* background: radial-gradient(circle, #8B8680 0%, transparent 60%); */
+    transform: rotate(-15deg);
+}
 
-        .decoration-3 {
-            width: 574px;
-            height: 517px;
-            left: -150px;
-            top: 170.2px;
-            background: radial-gradient(circle, #8B8680 0%, transparent 60%);
-            transform: rotate(10deg);
-        }
+.decoration-3 {
+    width: 574px;
+    height: 517px;
+    left: -150px;
+    top: 170.2px;
+    background-image: url('images/v127_616.png');
+    /* background: radial-gradient(circle, #8B8680 0%, transparent 60%); */
+    transform: rotate(10deg);
+}
 
-        .decoration-4 {
-            width: 574px;
-            height: 517px;
-            right: -150px;
-            top: -290.2px;
-            background: radial-gradient(circle, #8B8680 0%, transparent 60%);
-            transform: rotate(-10deg);
-        }
+
+.decoration-4 {
+    width: 574px;
+    height: 517px;
+    right: -150px;
+    top: -290.2px;
+    background-image: url('images/v127_616.png');
+    /* background: radial-gradient(circle, #8B8680 0%, transparent 60%); */
+    transform: rotate(-10deg);
+}
 
         .footer-content {
             display: flex;
@@ -2555,7 +2561,7 @@
         </div>
         
         <div class="contact-image-section">
-            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 400' fill='%23D9D9D9'%3E%3Crect width='400' height='400' fill='%23FFFFFF' fill-opacity='0.2' rx='15'/%3E%3Ctext x='200' y='200' text-anchor='middle' dy='.3em' font-family='Arial' font-size='16' fill='%23FFF'%3EContact Image%3C/text%3E%3C/svg%3E" alt="Contact" class="image-placeholder">
+                <img src="images/Picture 3.png" alt="CONTAINER" class="image-placeholder">
         </div>
     </div>
 
@@ -2608,7 +2614,7 @@
                 <div class="footer-logo">
                     <div class="footer-logo-wrapper">
                         <div class="footer-logo-img">
-                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 75 75' fill='%23D4B896'%3E%3Ccircle cx='37.5' cy='37.5' r='35' fill='%23D4B896'/%3E%3Ctext x='37.5' y='37.5' text-anchor='middle' dy='.3em' font-family='Arial' font-size='20' fill='%23333'%3EAQ%3C/text%3E%3C/svg%3E" alt="AqariQ Logo">
+      <img src="images/logo.png" alt="AqariQ Logo">
                         </div>
                         <div class="footer-logo-text">
                             <div class="footer-logo-main">AqariQ</div>
